--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	     <img class='letter' src='dance/s.gif' height=100>
        <img class='letter' src='dance/p.gif' height=100>
        <img class='letter' src='dance/o.gif' height=100>
-       <img class='letter' src='dance/n.gif' height=100>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+       <img class='letter' src='dance/n.gif' height=100>
        <img class='letter' src='dance/g.gif' height=100>
        <img class='letter' src='dance/e.gif' height=100>
        <img class='letter' src='dance/g.gif' height=100>
