--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <div id="main">
 
     <section id="about">
-        <h1>About the student</h1>
+        <h1>About</h1>
         <div>
-        <p><img src = "img/narks.jpg" align="left" height="300px" style="margin:0.2em 2em 1em 1em; display: block;"><em>Joshua Garcia</em> is a college senior at the City University of New York school, <b>Hunter College</b>. Garcia majors in both Studio Art and Emerging Media, and has prior html experience from taking Media 150. Outside of web production, Josh has also taken Media 160 and other media classes they can't remember the names of at the moment.</p>
+        <p><img src = "img/narks.jpg" align="left" height="300px" style="margin:0.2em 2em 1em 1em; display: block;">Hey you!!! It's me, that funny ol Goober from Tumblr who did stuff from Aquafresh to Woody's Roundup. Now that's over, I'm focusing on doing commissions! I primarily use Paint Tool Sai and Photoshop to create my works, drawing and coloring with the former and composing with the latter. I also toy around with After Effects every now and then to do some simple animations. Outside of the software realm, I'm also in the works of making a puppet of my own sona, and if that goes well I may also take puppet commisions too!!</p>
       </div>
       </section>
 
