--- a/index.html
+++ b/index.html
@@ -17,19 +17,9 @@
       <!-- navigation -->
       <div class = "sidenav">
         <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <div class="dropdown">
-          <button class="dropdownbtn">Projects
-            <i class="fa fa-caret-down"></i>
-          </button>
-            <div class="dropdown-content">
-              <a href="slideshowDemo/index.html" target="_blank">Slideshow</a>
-              <a href="video.html" target="_blank">Video Assignment</a>
-              <a href="collage.html" target="_blank">Collage</a>
-              <a href="knowyourstars.html" target="_blank">Animated text</a>
-            </div>
-          </div>
         <a href="#about">About</a>
+        <a href="#news">Artwork</a>
+        <a href="comminfo.html" target="_blank">Commission Info</a>
         <a href="#contact">Contact</a>
       </div>
 
