--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class = "sidenav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#news">Artwork</a>
+        <a href="works.html>Artwork</a>
         <a href="comminfo.html" target="_blank">Commission Info</a>
         <a href="#contact">Contact</a>
       </div>
