--- a/index.html
+++ b/index.html
@@ -58,17 +58,13 @@
 
       <section>
         <article>
-          <h1>Related Sites</h1>
+          <h1>Contact</h1>
           <ul>
-            <li><a href="https://jgwebproduction.blogspot.com/">My corresponding 285 blog</a></li>
-            <li><a href="https://fmundergrad.hunter.cuny.edu/~garciaja/medp150/">My MEDP 150 site</a></li>
+            <li><a href="https://twitter.com/SpongeGasm">My main Twitter</a></li>
+            <li><a href="https://twitter.com/SpongeGasmic">My art Twitter</a></li>
           </ul>
         </article>
       </section>
     </div>
-
-      <footer id="contact">
-      <p><a href="mailto:hremail.exe@gmail.com">Email me here!!!</a></p>
-      </footer>
     </body>
   </html>
