--- a/index.html
+++ b/index.html
@@ -56,14 +56,12 @@
         </blockquote>
       </section>
 
-      <section>
-        <article>
+      <section id="contact">
           <h1>Contact</h1>
           <ul>
             <li><a href="https://twitter.com/SpongeGasm">My main Twitter</a></li>
             <li><a href="https://twitter.com/SpongeGasmic">My art Twitter</a></li>
           </ul>
-        </article>
       </section>
     </div>
     </body>
