--- a/index.html
+++ b/index.html
@@ -43,20 +43,11 @@
     <section id="about">
         <h1>About</h1>
         <div>
-        <p><img src = "img/narks.jpg" align="left" height="300px" style="margin:0.2em 2em 1em 1em; display: block;">Hey you!!! It's me, that funny ol Goober from Tumblr who did stuff from Aquafresh to Woody's Roundup. Now that's over, I'm focusing on doing commissions! I primarily use Paint Tool Sai and Photoshop to create my works, drawing and coloring with the former and composing with the latter. I also toy around with After Effects every now and then to do some simple animations. Outside of the software realm, I'm also in the works of making a puppet of my own sona, and if that goes well I may also take puppet commisions too!!</p>
+        <p><img src = "img/Alex-dance-transparent.gif" align="left" height="300px" style="margin:0.2em 2em 1em 1em; display: block;">Hey you!!! It's me, that funny ol Goober from Tumblr who did stuff from Aquafresh to Woody's Roundup. Now that's over, I'm focusing on doing commissions! I primarily use Paint Tool Sai and Photoshop to create my works, drawing and coloring with the former and composing with the latter. I also toy around with After Effects every now and then to do some simple animations. Outside of the software realm, I'm also in the works of making a puppet of my own sona, and if that goes well I may also take puppet commisions too!!</p>
       </div>
       </section>
 
-      <section id="news" style="clear:both">
-        <h1>News</h1><audio src="audio/snd00.mp3" type="audio/mpeg" controls preload style="margin:0.2em 1em 1em 1em"></audio>
-        <blockquote>
-          "I believe that you <i>pray</i> to it when you are unhappy. <em>Men made it</em>, do not forget that. <strong>Great men</strong>, but men."
-          <!-- attributes for audio tag include: autoplay, loop, muted, preload, controls -->
-          <br>
-        </blockquote>
-      </section>
-
-      <section id="contact">
+      <section id="contact" style="clear:both">
           <h1>Contact</h1>
           <ul>
             <li><a href="https://twitter.com/SpongeGasm">My main Twitter</a></li>
