--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section id="about">
         <h1>About</h1>
         <div>
-        <p><img src = "img/Alex-dance-transparent.gif" align="left" height="300px" style="margin:0.2em 2em 1em 1em; display: block;">Hey you!!! It's me, that funny ol Goober from Tumblr who did stuff from Aquafresh to Woody's Roundup. Now that's over, I'm focusing on doing commissions! I primarily use Paint Tool Sai and Photoshop to create my works, drawing and coloring with the former and composing with the latter. I also toy around with After Effects every now and then to do some simple animations. Outside of the software realm, I'm also in the works of making a puppet of my own sona, and if that goes well I may also take puppet commisions too!!</p>
+        <p><a href="Alex.html"><img src = "img/Alex-dance-transparent.gif" align="left" height="300px" style="margin:0.2em 2em 1em 1em; display: block;"></a>Hey you!!! It's me, that funny ol Goober from Tumblr who did stuff from Aquafresh to Woody's Roundup. Now that's over, I'm focusing on doing commissions! I primarily use Paint Tool Sai and Photoshop to create my works, drawing and coloring with the former and composing with the latter. I also toy around with After Effects every now and then to do some simple animations. Outside of the software realm, I'm also in the works of making a puppet of my own sona, and if that goes well I may also take puppet commisions too!!</p>
       </div>
       </section>
 
