--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
     <head>
         <meta charset="utf-8">
-        <title>My MEDP 285 Homepage</title>
+        <title>Oy Walla MI</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Homepage for Web Production 1">
-        <meta name="author" content="Joshua">
+        <meta name="author" content="Alex Ander">
         <meta name="keywords" content="web design, design, animation, layout">
         <link rel="shortcut icon" href="img/ico new.png">
         <link rel="stylesheet" href="gridindex.css">
