--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <body>
       <!-- navigation -->
       <div class = "sidenav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="works.html">Artwork</a>
-        <a href="comminfo.html" target="_blank">Commission Info</a>
-        <a href="#contact">Contact</a>
+        <a class="skew1" href="#home">Home</a>
+        <a class="skew2" href="#about">About</a>
+        <a class="skew1" href="works.html">Artwork</a>
+        <a class="skew2" href="comminfo.html" target="_blank">Commission Info</a>
+        <a class="skew1" href="#contact">Contact</a>
       </div>
 
     <header id="home" align="center">
