--- a/comminfo.html
+++ b/comminfo.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <title>Commission Info</title>
 <head>
-  Commission Info
+  <h1>Commission Info</h1>
 </head>
+<body>
+  <h1>GENERAL RULES</h1>
+  <ul>
+    <li>No NSFW</li>
+    <li>No complex characters, although, this shouldn't scare you! You could definitely send over a ref and I could tell you if it's doable on my end or not. Who knows!</li>
+    <li>No hate speech</li>
+    <li>No gore?? Like while yeah it's kinda gross I'm just not able to draw that stuff.</li>
+</body>
