general info to the commpage

--- a/comminfo.html
+++ b/comminfo.html
@@ -7,7 +7,41 @@
   <h1>GENERAL RULES</h1>
   <ul>
     <li>No NSFW</li>
-    <li>No complex characters, although, this shouldn't scare you! You could definitely send over a ref and I could tell you if it's doable on my end or not. Who knows!</li>
+    <li>No complex characters</li>
+    <ul>
+      <li>Although, this shouldn't scare you! You could definitely send over a ref and I could tell you if it's doable on my end or not. Who knows!</li>
+    </ul>
     <li>No hate speech</li>
     <li>No gore?? Like while yeah it's kinda gross I'm just not able to draw that stuff.</li>
+  </ul>
+
+  <h2>Regular art commissions</h2>
+  <ul>
+    <li>Headshot/icon - $10</li>
+    <li>Bust shot - $30</li>
+    <li>Fullbody - $40</li>
+    <li>ADDITIONS</li>
+    <ul>
+      <li class="addition">+ full color shading - +$10</li>
+      <li class="addition">+ extra characters - +$10 each</li>
+      <li class="addition">+ full background - +$30</li>
+    </ul>
+  </ul>
+  <img src="img/commpage/essnew.png">
+
+  <h2>Fallen Angel YCHs- $10</h2>
+  <p>Comes as a .zip with the following items:</p>
+  <ul>
+    <li>The HD mp4 version</li>
+    <li>The gif version</li>
+  </ul>
+
+<h1>fsjals - $5 each</h1>
+<img src="img/commpage/fsjalextransparent.png" alt="Transparent fsjal of Alex">
+<h1>SEX!Twinkies</h1>
+<img src="img/commpage/josh SEX text.png" alt="SEX!Twinkie done for Josh">
+<p>Comes as a .zip with the following items:</p>
+<li>The regular transparent twinkie</li>
+<li>The twinkie with "SEX!" captioned over it</li>
+<li>The deepfried variant</li>
 </body>
