--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <img class='letter' src='dance/g.gif' height=100>
        <img class='letter' src='dance/a.gif' height=100>
        <img class='letter' src='dance/s.gif' height=100>
-       <img class='letter' src='dance/m.gif' height=100>
+       <img class='letter' src='dance/mee.gif' height=100>
     </header>
 
   <div id="main">
