added letters back

--- a/comminfo.html
+++ b/comminfo.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <title>Commission Info</title>
 <head>
-  <h1>Commission Info</h1>
-</head>
+        <meta charset="utf-8">
+        <title>Oy Walla MI</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Homepage for Web Production 1">
+        <meta name="author" content="Alex Ander">
+        <meta name="keywords" content="web design, design, animation, layout">
+        <link rel="shortcut icon" href="img/ico new.png">
+        <link rel="stylesheet" href="gridindex.css">
+        <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+      <!-- navigation -->
+      <div class = "sidenav">
+        <a class="skew1" href="#home">Home</a>
+        <a class="skew2" href="#about">About</a>
+        <a class="skew1" href="works.html">Artwork</a>
+        <a class="skew2" href="comminfo.html" target="_blank">Commission Info</a>
+        <a class="skew1" href="#contact">Contact</a>
+      </div>
+
+    <header id="home" align="center">
+      <img class='letter' src='dance/s.gif' height=100>
+      <img class='letter' src='dance/p.gif' height=100>
+      <img class='letter' src='dance/o.gif' height=100>
+      <img class='letter' src='dance/n.gif' height=100>
+      <img class='letter' src='dance/g.gif' height=100>
+      <img class='letter' src='dance/e.gif' height=100>
+      <img class='letter' src='dance/g.gif' height=100>
+      <img class='letter' src='dance/a.gif' height=100>
+      <img class='letter' src='dance/s.gif' height=100>
+      <img class='letter' src='dance/m.gif' height=100>
+    </header>
+
+  <div id="main">
+
 <body>
-  <h1>GENERAL RULES</h1>
+  <div class="h1">
+    <h1>GENERAL RULES</h1>
+  </div>
   <ul>
     <li>No NSFW</li>
     <li>No complex characters</li>
@@ -15,7 +52,9 @@
     <li>No gore?? Like while yeah it's kinda gross I'm just not able to draw that stuff.</li>
   </ul>
 
-  <h2>Regular art commissions</h2>
+<div class="h1">
+  <h1>Regular art commissions</h1>
+</div>
   <ul>
     <li>Headshot/icon - $10</li>
     <li>Bust shot - $30</li>
@@ -29,16 +68,23 @@
   </ul>
   <img src="img/commpage/essnew.png">
 
-  <h2>Fallen Angel YCHs- $10</h2>
+<div class="h1">
+  <h1>Fallen Angel YCHs- $10</h1>
+</div>
   <p>Comes as a .zip with the following items:</p>
   <ul>
     <li>The HD mp4 version</li>
     <li>The gif version</li>
   </ul>
 
-<h1>fsjals - $5 each</h1>
+<div class="h1">
+  <h1>fsjals - $5 each</h1>
+</div>
 <img src="img/commpage/fsjalextransparent.png" alt="Transparent fsjal of Alex">
-<h1>SEX!Twinkies</h1>
+
+<div class="h1">
+  <h1>SEX!Twinkies</h1>
+</div>
 <img src="img/commpage/josh SEX text.png" alt="SEX!Twinkie done for Josh">
 <p>Comes as a .zip with the following items:</p>
 <li>The regular transparent twinkie</li>
