--- a/comminfo.html
+++ b/comminfo.html
@@ -16,11 +16,11 @@
     <body>
       <!-- navigation -->
       <div class = "sidenav">
-        <a class="skew1" href="#home">Home</a>
-        <a class="skew2" href="#about">About</a>
+        <a class="skew1" href="index.html">Home</a>
+        <a class="skew2" href="index.html#about">About</a>
         <a class="skew1" href="works.html">Artwork</a>
         <a class="skew2" href="comminfo.html" target="_blank">Commission Info</a>
-        <a class="skew1" href="#contact">Contact</a>
+        <a class="skew1" href="index.html#contact">Contact</a>
       </div>
 
     <header id="home" align="center">
@@ -42,6 +42,7 @@
   <div class="h1">
     <h1>GENERAL RULES</h1>
   </div>
+
   <ul>
     <li>No NSFW</li>
     <li>No complex characters</li>
@@ -66,12 +67,15 @@
       <li class="addition">+ full background - +$30</li>
     </ul>
   </ul>
-  <img src="img/commpage/essnew.png">
+
+<div class = "examplepics">
+  <img src="img/commpage/essnew.png" width="400px">
+</div>
 
 <div class="h1">
   <h1>Fallen Angel YCHs- $10</h1>
 </div>
-  <p>Comes as a .zip with the following items:</p>
+  <p class="commdesc">Comes as a .zip with the following items:</p>
   <ul>
     <li>The HD mp4 version</li>
     <li>The gif version</li>
@@ -80,14 +84,23 @@
 <div class="h1">
   <h1>fsjals - $5 each</h1>
 </div>
-<img src="img/commpage/fsjalextransparent.png" alt="Transparent fsjal of Alex">
+
+<div class = "examplepics">
+  <img src="img/commpage/fsjalextransparent.png" alt="Transparent fsjal of Alex">
+</div>
 
 <div class="h1">
   <h1>SEX!Twinkies</h1>
 </div>
-<img src="img/commpage/josh SEX text.png" alt="SEX!Twinkie done for Josh">
-<p>Comes as a .zip with the following items:</p>
-<li>The regular transparent twinkie</li>
-<li>The twinkie with "SEX!" captioned over it</li>
-<li>The deepfried variant</li>
+
+<div class = "examplepics">
+  <img src="img/commpage/josh SEX text.png" alt="SEX!Twinkie done for Josh">
+</div>
+
+<p class="commdesc">Comes as a .zip with the following items:</p>
+<ul>
+  <li>The regular transparent twinkie</li>
+  <li>The twinkie with "SEX!" captioned over it</li>
+  <li>The deepfried variant</li>
+</ul>
 </body>
