--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
     <header id="home" align="center">
-      <img class='letter' src='dance/s.gif' height=100>
+      <img class='letter' src='dance/m.gif' height=100>
       <img class='letter' src='dance/p.gif' height=100>
       <img class='letter' src='dance/o.gif' height=100>
       <img class='letter' src='dance/n.gif' height=100>
