--- a/index.html
+++ b/index.html
@@ -60,3 +60,16 @@
     </div>
     </body>
   </html>
+
+  <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+  try {
+  var pageTracker = _gat._getTracker("UA-11486297-3");
+  pageTracker._trackPageview();
+  } catch(err) {}</script>
+  <script type='text/javascript' src='//www.midijs.net/lib/midi.js'></script>
+  <script>
+  MIDIjs.play('sound/wonderwall.mid');</script>	
