scatman's world midi

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script type='text/javascript' src='//www.midijs.net/lib/midi.js'></script>
     </head>
 
-    <body onload="MIDIjs.play('sound/wonderwall.mid')">
+    <body onload="MIDIjs.play('sound/Scatman's-World.mid')">
       <!-- navigation -->
       <div class = "sidenav">
         <a class="skew1" href="#home">Home</a>
