--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
         <script type='text/javascript' src='//www.midijs.net/lib/midi.js'></script>
     </head>
 
-<<<<<<< HEAD
-    <body onload="MIDIjs.play('sound/scatmansworld.mid')">
-=======
-    <body onload="MIDIjs.play('sound/Scatman's-World.mid')">
->>>>>>> parent of 7a33734... name change
+    <body onload="MIDIjs.play('sound/ScatmansWorld.mid')">
       <!-- navigation -->
       <div class = "sidenav">
         <a class="skew1" href="#home">Home</a>
