--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
       </div>
 
     <header id="home" align="center">
-      <img class='letter' src='dance/s.gif' style="width:100%" height=100>
-      <img class='letter' src='dance/p.gif' style="width:100%" height=100>
-      <img class='letter' src='dance/o.gif' style="width:100%" height=100>
-      <img class='letter' src='dance/n.gif' style="width:100%" height=100>
-      <img class='letter' src='dance/g.gif' style="width:100%" height=100>
-      <img class='letter' src='dance/e.gif' style="width:100%" height=100>
-      <img class='letter' src='dance/g.gif' style="width:100%" height=100>
-      <img class='letter' src='dance/a.gif' style="width:100%" height=100>
-      <img class='letter' src='dance/s.gif' style="width:100%" height=100>
-      <img class='letter' src='M.gif' style="width:100%" height=100>
+      <img class='letter' src='dance/s.gif' style="width:8%">
+      <img class='letter' src='dance/p.gif' style="width:8%">
+      <img class='letter' src='dance/o.gif' style="width:8%">
+      <img class='letter' src='dance/n.gif' style="width:8%">
+      <img class='letter' src='dance/g.gif' style="width:8%">
+      <img class='letter' src='dance/e.gif' style="width:8%">
+      <img class='letter' src='dance/g.gif' style="width:8%">
+      <img class='letter' src='dance/a.gif' style="width:8%">
+      <img class='letter' src='dance/s.gif' style="width:8%">
+      <img class='letter' src='M.gif' style="width:8%">
     </header>
 
   <div id="main">
