--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <meta name="keywords" content="web design, design, animation, layout">
         <link rel="shortcut icon" href="img/ico new.png">
         <link rel="stylesheet" href="gridindex.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
         <script type='text/javascript' src='//www.midijs.net/lib/midi.js'></script>
