Threw in a tracker

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <meta name="keywords" content="web design, design, animation, layout">
         <link rel="shortcut icon" href="img/ico new.png">
         <link rel="stylesheet" href="gridindex.css">
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="styles.css">
+        <!--<link rel="stylesheet" href="reset.css">-->
+        <!--<link rel="stylesheet" href="styles.css">-->
         <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-        <script type='text/javascript' src='//www.midijs.net/lib/midi.js'></script>
+        <!--<script type='text/javascript' src='//www.midijs.net/lib/midi.js'></script>-->
     </head>
 
     <body onload="MIDIjs.play('sound/ScatmansWorld.mid')">
@@ -61,5 +61,20 @@
           </ul>
       </section>
     </div>
+    <!-- Default Statcounter code for Just tryna see something
+http://github.io/spongegasm -->
+<script type="text/javascript">
+var sc_project=12354100; 
+var sc_invisible=1; 
+var sc_security="28b8d6ad"; 
+var sc_https=1; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12354100/0/28b8d6ad/1/" alt="Web
+Analytics"></a></div></noscript>
+<!-- End of Statcounter Code -->
     </body>
   </html>
