--- a/index.html
+++ b/index.html
@@ -61,20 +61,19 @@
           </ul>
       </section>
     </div>
-    <!-- Default Statcounter code for Just tryna see something
-http://github.io/spongegasm -->
+<!-- Default Statcounter code for Just tryna see something  -->
 <script type="text/javascript">
 var sc_project=12354100; 
 var sc_invisible=1; 
 var sc_security="28b8d6ad"; 
 var sc_https=1; 
+var sc_remove_link=1; 
 </script>
 <script type="text/javascript"
 src="https://www.statcounter.com/counter/counter.js" async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img class="statcounter"
-src="https://c.statcounter.com/12354100/0/28b8d6ad/1/" alt="Web
-Analytics"></a></div></noscript>
+<noscript><div class="statcounter"><img class="statcounter"
+src="https://c.statcounter.com/12354100/0/28b8d6ad/1/" alt="Web Analytics Made
+Easy - StatCounter"></div></noscript>
 <!-- End of Statcounter Code -->
     </body>
   </html>
